Add computation for all channels other than Ridges/Weirdness Underground biomes often get assigned on the surface